--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,20 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lista de Atividades</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Lista Atividades</title>
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
     <div class="container">
-
         <h1 class="text-center">Lista de Atividades</h1>
         <h3 class="text-center">Acesso</h3>
         <div class="row">
-            <div class="col-sm"><a href="/login" class="btn btn-info">Login</a></div>
-            <div class="col-sm"><a href="/Registro" class="btn btn-danger">Registro</a></div>
+            <div class="col-sm text-center"><a href="/login"class="btn btn-info botao">Login</a></div>
+            <div class="col-sm text-center"><a href="/registro"class="btn btn-danger botao">Registro</a></div>
         </div>
-    
     </div>
-
 </body>
 </html>
