--- a/views/atividades.ejs
+++ b/views/atividades.ejs
@@ -4,82 +4,75 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista de Atividades</title>
+    <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilos.css">
 </head>
-<body>
+<body class="bg-dark text-light">
     <div class="container">
         <h1 class="text-center">Lista de Atividades</h1>
-        <h3 class="text-center">Usuarios: <%=nome%></h3>
+        <h3 class="text-center">Usuário: <%=nome%></h3>
         <div class="row">
             <div class="col-sm text-center">
                 <h3 class="text-center">Cadastrar</h3>
-                <form action="/atividades" method="POST" class="form-control">
-                    <input type="hidden" name="id" value="<%=id%>">
-                    <input type="hidden" name="nome" value="<%=nome%>">
-                    <div class="form-floating">
-                        <input type="date" name="data" id="floatingInput" class="form-control" placeholder="Data">
-                        <label for="floatingInput">Data de Entrega</label>
-                    </div>
-                    
-                    <div class="form-floating">
-                    <select name="tipo" id="floatingSelect" class="form-control">
+            <form action="/atividades" method="post" class="form-control">
+                <input type="hidden" name="id" value="<%=id%>">
+                <input type="hidden" name="nome" value="<%=nome%>">
+            <div class="form-floating">
+                <input type="date" name="data" id="floatingInput" class="form-control" placeholder="Data">
+                <label for="floatingInput">Data de entrega</label>
+            </div>
+                <div class="form-floating">
+                <select name="tipo" id="" name="tipo" class="form-control">
+                    <option value="0">Selecione...</option>
+                    <option value="1">AC</option>
+                    <option value="2">AT</option>
+                    <option value="3">REC</option>
+                    <option value="4">EXAME</option>
+                </select>
+                <label for="floatingSelect">Tipo de Atividade</label>
+                </div>
+                <div class="form-floating">
+                    <select name="disciplina" id="" name="disciplina" class="form-control">
                         <option value="0">Selecione...</option>
-                        <option value="1">AC</option>
-                        <option value="2">AT</option>
-                        <option value="3">REC</option>
-                        <option value="4">Exame</option>
+                        <option value="LP2">LP2</option>
+                        <option value="BD2">BD2</option>
+                        <option value="INW">INW</option>
+                        <option value="LPL">LPL</option>
+                        <option value="ING">ING</option>
                     </select>
-                    <label for="floatingSelect">Tipo de Atividade</label>
-                    </div>
-                    <label for="" class="form-control">Como Entrega:</label>
-                    <input type="radio" name="entrega" class="form-check-input" id="" value="tarefa">Tarefa no Teams
-                    <input type="radio" name="entrega" class="form-check-input" id="" value="chat">Chat do Teams
-                    <input type="radio" name="entrega" class="form-check-input" id="" value="email">Email
-                    <input type="radio" name="entrega" class="form-check-input" id="" value="formulario">Forms
-                    <label for="" class="form-control">Matéria:</label>
-                    <input type="radio" name="materia" class="form-check-input" id="" value="Matematica">Matematica
-                    <input type="radio" name="materia" class="form-check-input" id="" value="Física">Física
-                    <input type="radio" name="materia" class="form-check-input" id="" value="Química">Química
-                    <input type="radio" name="materia" class="form-check-input" id="" value="Português">Português
-                    <label for="" class="form-control">Orientações:</label>
-                    <textarea name="orientacoes" id="" cols="30" rows="10" class="form-control"></textarea>
-                    <input type="submit" value="Gravar" class="btn btn-success">
-
-                    
-                </form>
+                    <label for="floatingSelect">Disciplina</label>
+                </div>
+                <label for="" class="form-control">Como entregar:</label>
+                <input type="radio" name="entrega" class="form-check-input" id="" value="tarefa">Tarefa no Teams 
+                <input type="radio" name="entrega" class="form-check-input" id="" value="Chat">Chat do Teams
+                <input type="radio" name="entrega" class="form-check-input" id="" value="email">Email
+                <input type="radio" name="entrega" class="form-check-input" id="" value="formulario">Forms             
+                <label for="" class="form-control">Orientações:</label>
+                <textarea name="orientacao" id="" cols="30" rows="10" class="form-control"></textarea>
+                <input type="submit" value="Gravar" class="btn btn-outline-dark botao">
+            </form>
             </div>
             <div class="col-sm text-center">
                 <h3>Atividades Cadastradas</h3>
-
-                <%for(var n=0; n<dados.length; n++){%>
-    
-                    <div class="card">
-    
-                        <div class="card-header">Data: <%=dados[n].data.getDate()%>/<%=dados[n].data.getMonth()+1%>/<%=dados[n].data.getFullYear() %></div>
-                        <div class="card-body">
-                            <div class="card-title">Tipo:<%=dados[n].tipo %></div>
-                            <div class="card-subtitle">Entrega:<%=dados[n].entrega %></div>
-                            <div class="card-materia">Matéria:<%=dados[n].materia%></div>
-                            <div class="card-text">Orientações:<%=dados[n].instrucoes %></div>
-                            
-                        </div>
-                        <div class="card-footer">
-                            <div class="input-group">
-                                <input type="button" value="Entregue" class="btn btn-success form-control">
-                                <input type="button" value="Alterar" class="btn btn-warning form-control">
-                                <input type="button" value="Excluir" class="btn btn-danger form-control" onclick="(window.location.href='/excluir?id=<%=dados[n]._id%>')">
-                            </div>
-    
-                        </div>
-    
+                <% for (var n=0; n<dados.length; n++){%> <!--pq tem q ser menor? pq o length conta qnts documentos ele tem, começa a numerar por 0 -->
+                <div class="card">
+                    <div class="card-header bg-dark text-light">Data:<%=dados[n].data.getDay()+1%>° Dia da semana/<%=dados[n].data.getDate()%>/<%=dados[n].data.getMonth()+1%></div>
+                    <div class="card-body">
+                        <div class="card-title text-dark">Tipo: <%=dados[n].tipo%></div>
+                        <div class="card-text text-dark">Disciplina: <%=dados[n].disciplina%></div>
+                        <div class="card-subtitle text-dark">Entrega:<%=dados[n].entrega%></div>
+                        <div class="card-text text-dark">Orientações: <%=dados[n].instrucoes%></div>
                     </div>
-                    <br>
-    
-                    <% } %>
-
-
+                    <div class="card-footer">
+                        <div class="input-group">
+                            <input type="button" value="Entregue" class="btn btn-outline-success form-control" onclick="(window.location.href='/entregue?id=<%=dados[n]._id%>')" >
+                            <input type="button" value="Alterar" class="btn btn-outline-warning form-control" onclick="(window.location.href='/alterar?id=<%=dados[n]._id%>')">
+                            <input type="button" value="Excluir" class="btn btn-outline-danger form-control" onclick="(window.location.href='/excluir?id=<%=dados[n]._id%>')" >
+                        </div>
+                    </div>
+                </div>
+                <% }%>
             </div>
         </div>
     </div>
