--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,34 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista de Atividades</title>
-    <!--Instalar icones-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
+    <title>Document</title>
+    <!--Boostrap Css-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!--Boostrap Olho-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/estilos.css">
 </head>
-<body>
+<body class="bg-dark text-light">
     <div class="container">
         <h1 class="text-center">Lista de Atividades</h1>
         <h3 class="text-center">Login</h3>
         <div class="row">
             <div class="col text-center">
-                <form action="" method="POST" class="form-control">
-                    <input type="email" name="email" id="" class="form-control" placeholder="email">
-                    <div class="input-group">
-                    <input type="password" name="senha" id="senha" class="form-control" placeholder="senha">
-                    <i class="bi bi-eye-fill btn btn-dark" id="troca"></i></div>
-                    <input type="submit" value="Entrar" class="btn btn-info">
-                </form>
-                <a href="/registro"class="btn btn-info botao">Registrar</a>
+            <form action="" method="post" class="form-control">
+                <input type="email" name="email" id="" class="form-control" placeholder="Email">
+                <div class="input-group">
+                <input type="password" id="senha" name="senha" id="" class="form-control" placeholder="Senha">
+                <i class="bi bi-eye-fill btn btn-outline-secondary" id="troca"></i></div>
+                <input type="submit" value="Entrar" class="btn btn-dark botao">
+            </form>
+            <a href="/registro" class="btn btn-light botao">Registro</a>
             </div>
         </div>
-    </div>
+    </div>  
     <script>
         var trocaTipo = document.querySelector('#troca')
         var senha = document.querySelector("#senha")
 
-        trocaTipo.addEventListener('click',()=>{
+        trocaTipo.addEventListener('click', ()=>{
             var tipo = senha.getAttribute("type") === "password" ?
             "text" : "password"
             senha.setAttribute("type",tipo)
